--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ affiliation: Peking University
 subaffiliation: Guanghua School of Management
 affiliation_link: https://english.pku.edu.cn/
 subaffiliation_link: https://en.gsm.pku.edu.cn/
-affiliation_logo: ./assets/img/spinion.svg
+affiliation_logo: ./assets/img/logogsm.png
 email: mwxu (at) pku.edu.cn
 email2: edson.mwxu (at) gmail.com
 address: PKU Science Park, Beijing, China
