--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,23 +1,20 @@
 main:
 
-  - title: "Contact"
-    url: ./#contact 
+  - title: "Teaching"
+    url: ./#teaching 
     right: true 
 
-  - title: "Conferences & Events"
-    url: ./#conferences
+  - title: "Work in Progress"
+    url: ./#workinprogress 
+
+  - title: "Working Papers"
+    url: ./#workingpaper
 
   - title: "Publications"
     url: ./#publications
 
-  - title: "Projects"
-    url: ./#projects
-
   - title: "News"
     url: ./#news
 
-  - title: "Blogs"
-    url: ./blog/
-
-  - title: "Bio"
+  - title: "About"
     url: ./#about-me
