--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,11 @@
 main:
 
+  - title: "Teaching"
+    url: ./#teaching 
+    right: true 
+
   - title: "Work in Progress"
     url: ./#workinprogress 
-    right: true 
 
   - title: "Working Papers"
     url: ./#workingpaper
