--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ enable_last_update: false
 # researchgate: https://www.researchgate.net/profile/Song-Chen-60
 
 # Images 
-avatar: ./assets/img/avatar3.jpg
+avatar: ./assets/img/HKUBS_Horizontal_White.webp
 favicon: ./assets/img/avatar3_2.png
 favicon_dark: ./assets/img/favicon-dark.png
 
