--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,8 @@ enable_last_update: false
 
 # Images 
 avatar: ./assets/img/avatar3.jpg
-favicon: ./assets/img/avatar3_2.png
-favicon_dark: ./assets/img/favicon-dark.png
+favicon: ./assets/img/icon.png
+favicon_dark: ./assets/img/icon.png
 
 # Footnotes
 # Footnote
